--- a/src/sass/_nav-main.scss
+++ b/src/sass/_nav-main.scss
@@ -6,6 +6,7 @@
   background-color: $blue;
 
   &__item {
+    position: relative;
     display: inline-block;
   }
 
@@ -21,6 +22,11 @@
     text-transform: capitalize;
 
     &:hover {
+      color: #ef5966;
+      background-color: #fff;
+    }
+
+    &_hovered {
       color: #ef5966;
       background-color: #fff;
     }
