--- a/src/sass/_nav-main.scss
+++ b/src/sass/_nav-main.scss
@@ -1,5 +1,10 @@
-.nav-main {
-  margin: 0;
+.nav {
+  position: relative;
+  z-index: 1;
+  margin: 1.111% 0 1.282% 0;
+}
+
+.nav-main { 
   padding: 0;
   list-style: none;
   text-align: center;
