crafts section added

--- a/src/sass/mounting-point.scss
+++ b/src/sass/mounting-point.scss
@@ -9,6 +9,7 @@
 @import 'nav-main';
 @import 'dropdown';
 @import 'slider';
-@import 'rollover';
 @import 'search';
 @import 'jewelry';
+@import 'crafts';
+@import 'controls';
