--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -34,7 +34,6 @@
     background-color: #3c3c3c;
 
     &:hover {
-      background-color: $blue;
       cursor: pointer;
     }
 
@@ -65,6 +64,14 @@
       margin-left: -12px;
       border-left-color: transparent;
       border-top-color: transparent;
+    }
+
+    &_blue:hover {
+      background-color: $blue;
+    }
+
+    &_red:hover {
+      background-color: $red;
     }
   }
 
